Remedied link wrapping issue

--- a/src/_includes/components/core/links/_links.scss
+++ b/src/_includes/components/core/links/_links.scss
@@ -31,8 +31,6 @@ a {
 
     // External link
     &[rel~="external"] {
-      white-space: nowrap;
-
       &::after {
         background: url(/assets/icons/icon_external.svg) no-repeat;
         content: "";
